feat(m-61): document CommentController
